--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/city-bingo-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Traveling? Don't plan - play!"
-    />
+    <meta name="description" content="Traveling? Don't plan - play!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/city-bingo-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@300&family=Ubuntu&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Urbanist:wght@100;400&display=swap"
       rel="stylesheet"
     />
     <title>City Bingo</title>
