--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Urbanist:wght@100;400&display=swap"
       rel="stylesheet"
     />
-    <title>City Bingo</title>
+    <title>Alert Bingo (City Bingo)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
